fixed some spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
+	max-width: 100%;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -38,16 +39,17 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
-	min-width: 100%
+	min-width: 100%;
 }
 #footer {
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding-top: 25px;
   text-align: center;
   text-transform: uppercase;
+	width: 100%;
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -185,8 +187,6 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  position: fixed;
-  top: 0;
   width: 100%;
   z-index: 1000;
 }
@@ -241,10 +241,10 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 40px 20px 30px;
-  width: 100%;
+  width: 90%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding-top: 30px;
 }
 #reviews-container h3 {
   color: #694400;
